--- a/res/style.css
+++ b/res/style.css
@@ -12,7 +12,7 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 
 /* GENERIC & CONTENT */
 body {
-	background-image: url(../user/cover.jpg);
+	background-image: url(user/cover.jpg);
 	background-repeat: no-repeat;
 	background-position: top center;
 	overflow-y: scroll;
@@ -182,7 +182,7 @@ article time {
 	display: block;
 	opacity: 1;
 	margin-bottom: 10px;
-	background-image: url('social.png');
+	background-image: url(res/social.png);
 }
 
 #social .twitter { background-position: 0px 0px; }
